--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "mongoose": "^8.19.4"
-  },
+  "cors": "^2.8.5",
+  "express": "^5.1.0",
+  "dotenv": "^16.0.0",
+  "mongoose": "^8.19.4"
+},
+
   "devDependencies": {
     "nodemon": "^3.1.11"
   }
